flux/apps/hoyeslab/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:6.4.4
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: radarr-config
            - mountPath: /data
              name: media
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http
          readinessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http

      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        # Mount the entire media share so radarr can hard link
        # from /data/torrents/ to /data/media/movies/
        - name: media
          persistentVolumeClaim:
            claimName: media
