flux/apps/hoyeslab/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7878
      targetPort: http
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
