flux/apps/hoyeslab/media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.hoyes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
  tls:
    - hosts:
        - radarr.hoyes.dev
      secretName: hoyes-dev-tls
